--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A reactjs exercise",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "webpack-dev-server --progress --port 3000",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Jairo André <jairo.andre@gmail.com> (http://github.com/jairoandre)",
@@ -13,23 +13,21 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babelify": "^7.2.0",
+    "material-design-icons": "^2.1.1",
     "material-ui": "^0.14.0-rc2",
     "react": "^0.14.3",
     "react-dom": "^0.14.3"
   },
   "devDependencies": {
+    "babel-cli": "^6.4.5",
     "babel-core": "^6.3.21",
     "babel-loader": "^6.2.0",
+    "babel-plugin-transform-object-rest-spread": "^6.3.13",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "react-hot-loader": "^1.3.0",
+    "style-loader": "^0.13.0",
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.0"
-  },
-  "babel": {
-    "presets": [
-      "es2015",
-      "react"
-    ]
   }
 }
