--- a/package.json
+++ b/package.json
@@ -16,15 +16,19 @@
     "material-design-icons": "^2.1.1",
     "material-ui": "^0.14.0-rc2",
     "react": "^0.14.3",
+    "react-addons-css-transition-group": "^0.14.7",
     "react-dom": "^0.14.3"
   },
   "devDependencies": {
+    "autoprefixer": "^6.3.1",
     "babel-cli": "^6.4.5",
     "babel-core": "^6.3.21",
     "babel-loader": "^6.2.0",
     "babel-plugin-transform-object-rest-spread": "^6.3.13",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
+    "css-loader": "^0.23.1",
+    "postcss-loader": "^0.8.0",
     "react-hot-loader": "^1.3.0",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.9",
