--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A reactjs exercise",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --progress --port 3000",
+    "start": "webpack-dev-server --progress --hot --port 3000 --colors",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Jairo André <jairo.andre@gmail.com> (http://github.com/jairoandre)",
@@ -14,7 +14,7 @@
     "babel-preset-react": "^6.3.13",
     "babelify": "^7.2.0",
     "material-design-icons": "^2.1.1",
-    "material-ui": "^0.14.0-rc2",
+    "material-ui": "^0.14.4",
     "react": "^0.14.3",
     "react-addons-css-transition-group": "^0.14.7",
     "react-dom": "^0.14.3"
@@ -24,12 +24,14 @@
     "babel-cli": "^6.4.5",
     "babel-core": "^6.3.21",
     "babel-loader": "^6.2.0",
+    "babel-plugin-react-transform": "^2.0.0",
     "babel-plugin-transform-object-rest-spread": "^6.3.13",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "css-loader": "^0.23.1",
     "postcss-loader": "^0.8.0",
     "react-hot-loader": "^1.3.0",
+    "react-transform-hmr": "^1.0.2",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.0"
