--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babelify": "^7.2.0",
+    "griddle-react": "^0.3.1",
     "material-design-icons": "^2.1.1",
     "material-ui": "^0.14.4",
     "react": "^0.14.3",
